.provarCaches/00D5f000005vwGkEAI/objects/rstkf__vendorcreditapplyhist__c.object
<CustomObject>
    <description>vendorcreditapplyhist__c : This table is used for temporary storage of result created by vendor application report processor</description>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcreditapplyhist_apapplic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payables Application Transaction</label>
        <referenceTo>rstkf__apapplic__c</referenceTo>
        <relationshipLabel>Vendor Credit Application Historys</relationshipLabel>
        <relationshipName>vendorcreditapplyhists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcreditapplyhist_cmpno__c</fullName>
        <label>Company Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcreditapplyhist_gainloss__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gain/Loss</label>
        <referenceTo>rstkf__apapplicforex__c</referenceTo>
        <relationshipLabel>Vendor Credit Application Historys</relationshipLabel>
        <relationshipName>vendorcreditapplyhists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcreditapplyhist_gainlossbooked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gain/Loss Booked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcreditapplyhist_gainlossgl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Z_OBSOLETE</label>
        <referenceTo>rstkf__gltxn__c</referenceTo>
        <relationshipLabel>Vendor Credit Application Historys</relationshipLabel>
        <relationshipName>vendorcreditapplyhists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcreditapplyhist_gainlosstaken__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gain/Loss Taken</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcreditapplyhist_invoicedr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice/Debit Memo</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipLabel>Vendor Credit Application Historys</relationshipLabel>
        <relationshipName>vendorcreditapplyhists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcreditapplyhist_invoicedragreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoive/Debit Agreement Memo</label>
        <referenceTo>rstk__poagrhdr__c</referenceTo>
        <relationshipLabel>Vendor Credit Application Historys</relationshipLabel>
        <relationshipName>vendorcreditapplyhists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcreditapplyhist_invoicedrpo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice/Debit Purchase Order Memo</label>
        <referenceTo>rstk__pohdr__c</referenceTo>
        <relationshipLabel>Vendor Credit Application Historys</relationshipLabel>
        <relationshipName>vendorcreditapplyhists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcreditapplyhist_invoicedrpoline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoive/Debit PO Line Memo</label>
        <referenceTo>rstk__poline__c</referenceTo>
        <relationshipLabel>Vendor Credit Application Historys</relationshipLabel>
        <relationshipName>vendorcreditapplyhists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcreditapplyhist_invoicedrporctap__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoive/Debit PO Receipt Memo</label>
        <referenceTo>rstk__porcptap__c</referenceTo>
        <relationshipLabel>Vendor Credit Application Historys</relationshipLabel>
        <relationshipName>vendorcreditapplyhists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcreditapplyhist_sortbyoption__c</fullName>
        <label>Sort By Option</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcreditapplyhist_sortfield__c</fullName>
        <label>Order By</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcreditapplyhist_usrno__c</fullName>
        <label>User Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcreditapplyhist_vendorcr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Credit</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipLabel>Vendor Credit Application Historys (Vendor Credit)</relationshipLabel>
        <relationshipName>vendorcreditapplyhists01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcreditapplyhist_vendorcragreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Credit Agreement</label>
        <referenceTo>rstk__poagrhdr__c</referenceTo>
        <relationshipLabel>Vendor Credit Application Historys (Vendor Credit Agreement)</relationshipLabel>
        <relationshipName>vendorcreditapplyhists01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcreditapplyhist_vendorcrpo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Credit Purchase Order</label>
        <referenceTo>rstk__pohdr__c</referenceTo>
        <relationshipLabel>Vendor Credit Application Historys (Vendor Credit Purchase Order)</relationshipLabel>
        <relationshipName>vendorcreditapplyhists01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcreditapplyhist_vendorcrpoline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Credit PO Line</label>
        <referenceTo>rstk__poline__c</referenceTo>
        <relationshipLabel>Vendor Credit Application Historys (Vendor Credit PO Line)</relationshipLabel>
        <relationshipName>vendorcreditapplyhists01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcreditapplyhist_vendorcrporcptap__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Credit PO Receipt</label>
        <referenceTo>rstk__porcptap__c</referenceTo>
        <relationshipLabel>Vendor Credit Application Historys (Vendor Credit PO Receipt)</relationshipLabel>
        <relationshipName>vendorcreditapplyhists01</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vendor Credit Application History</label>
    <listViews>
        <fullName>rstkf__RS_Vendor_Credit_Application_History</fullName>
        <columns>NAME</columns>
        <columns>rstkf__vendorcreditapplyhist_cmpno__c</columns>
        <columns>rstkf__vendorcreditapplyhist_apapplic__c</columns>
        <columns>rstkf__vendorcreditapplyhist_sortfield__c</columns>
        <columns>rstkf__vendorcreditapplyhist_sortbyoption__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Vendor Credit Application History</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Credit Application Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>